<resources>
    <string name="app_name">Juego</string>
    <!--MAIN-->
    <string name="btn_login">Iniciar Sesion</string>
    <string name="btn_registrar">Crear Cuenta!</string>
    <!--REGISTRO-->
    <string name="correoEt">Ingresa tu Correo</string>
    <string name="passEt">Contraseña</string>
    <string name="usuarioEt">Usuario</string>
    <string name="Registrar">REGISTRAR</string>
    <!--LOGIN-->
    <string name="correoLoginEt">Correo Electronico</string>
    <string name="passLoginEt">Contraseña</string>
    <string name="Entrar">Entrar</string>
    <!--MENU-->
    <string name="Puntuaciontxt">Mi Puntuación</string>
    <string name="Plataformas">--</string>
    <string name="uid">--</string>
    <string name="correo">--</string>
    <string name="usuario">--</string>

    <string name="Menutxt">Menú</string>

    <string name="btn_jugar">Jugar</string>
    <string name="btn_puntuaciones">Puntuaciones</string>
    <string name="btn_acerca">Acerca de</string>
    <string name="btn_cerrarSesion">Cerrar Sesión</string>

    <!--JUEGO-->
    <string name="TvContador"> 0 </string>
    <string name="TvUsuario"> ---- </string>
    <string name="TvTiempo"> 0S </string>

    <string name="AnchoTv">--</string>
    <string name="AltoTv">--</string>

</resources>