<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/Puntuaciontxt"
            android:text="@string/Puntuaciontxt"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Plataformas"
            android:text="@string/Plataformas"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imagen"
            android:src="@drawable/seta"
            android:layout_width="150dp"
            android:layout_height="150dp">

        </androidx.constraintlayout.utils.widget.ImageFilterView>

        <TextView
            android:id="@+id/uid"
            android:text="@string/uid"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/correo"
            android:text="@string/correo"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/usuario"
            android:text="@string/usuario"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Menutxt"
            android:text="@string/Menutxt"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_jugar"
            android:text="@string/btn_jugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_puntuaciones"
            android:text="@string/btn_puntuaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_acerca"
            android:text="@string/btn_acerca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_cerrarSesion"
            android:text="@string/btn_cerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>