<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".Juego">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--HEADER-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <!--imagen-->
            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/aplastados" />
            <!--Contador-->
            <TextView
                android:id="@+id/TvContador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/TvContador"
                android:textColor="#ffffff"
                android:textSize="20sp" />
            <!--Usuario-->
            <TextView
                android:id="@+id/TvUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/TvUsuario"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <!--ANIMACIÓN-->
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="tiempo.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />
            <!--Tiempo-->
            <TextView
                android:id="@+id/TvTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/TvTiempo"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--PLATAFORMA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/IvPlataforma"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/plataforma" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>